--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js"
+    "start:prod": "NODE_ENV=production node build/server.js",
+    "start:dev": "NODE_ENV=development node build/server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
