--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "razzle": "3.3.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   },
-  "devDependencies": {
-    "razzle": "^3.3.13"
-  }
+  "devDependencies": {}
 }
